# web-ui-component-spec-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
data/: __init__.py  store.py
examples/: example-prompts.md
parsers/: __init__.py  parse_catalog.py  parse_principles.py  parse_stepbystep.py
skill/: skill-compact.md  skill-full.md
source/: Component_Catalog.md  Core_Principles.md  README.md  Step_By_Step_Guide.md
tools/: __init__.py  get_component_spec.py  get_component_summary.py  get_component_tests.py  get_components_by_scenario.py  get_core_principles.py  get_related_components.py  get_step_by_step.py  list_components.py  search_components.py  validate_component_checklist.py
