[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-ui-component-spec-mcp"
version = "1.0.0"
description = "MCP server for the Web UI Component Specification — behavioral specs, tests, and principles for web UI component libraries"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Sebastian Gamboa", email = "gcsebas99@gmail.com" }]
keywords = ["mcp", "ui", "components", "specification", "accessibility", "design-system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "thefuzz>=0.22.1",
]

[project.urls]
Homepage = "https://github.com/gcsebas99/web-ui-component-spec-mcp"
Repository = "https://github.com/gcsebas99/web-ui-component-spec-mcp"
Issues = "https://github.com/gcsebas99/web-ui-component-spec-mcp/issues"

[project.scripts]
web-ui-spec-mcp = "server:main"

[tool.hatch.build.targets.wheel]
# Include source MD files and skill files in the package
include = [
    "server.py",
    "tools/**/*.py",
    "parsers/**/*.py",
    "data/**/*.py",
    "source/*.md",
    "skill/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "server.py",
    "tools/",
    "parsers/",
    "data/",
    "source/",
    "skill/",
    "examples/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
